added html content check (#2)